# practice-1

./: .gitignore  CMakeLists.txt  README.md  example.txt  main.cpp
include/: CMakeLists.txt  console_parser.h  console_parser.hpp  consoleparser.h  errors.h  errors.hpp  file_parser.hpp  fileparser.h
src/: CMakeLists.txt  console_parser.cpp  consoleparser.cpp  errors.cpp  file_parser.cpp  fileparser.cpp
tests/: CMakeLists.txt  console_parser_tests.cpp
